Assets/CSS/project_style.css
/* adds background image to the html pages behind content */
/* modified from: https://css-tricks.com/perfect-full-page-background-image/ */
.fixed_background {
    background: url(../images/camera_background.png) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    z-index: -1;
}

.site_title {
    font-family: "Playfair Display";
    /*font-size: 60px;*/
    font-style: normal;
    font-variant: normal;
    font-weight: 700;
    line-height: 26.4px;
}

.project_browse_title {
    font-family: "Playfair Display";
    font-size: 50px;
    font-style: normal;
    font-variant: normal;
    font-weight: 700;
    line-height: 40px;
    text-align: center;
    justify-items: center;
}

.nav_buttons {
    font-family: "Playfair Display";
    font-size: 25px;
    font-style: normal;
    font-variant: normal;
    font-weight: 700;
    line-height: 15.4px;
}

p {
    font-family: "Playfair Display";
    font-size: 14px;
    font-style: normal;
    font-variant: normal;
    font-weight: 400;
    line-height: 20px;
}

blockquote {
    font-family: "Playfair Display";
    font-size: 21px;
    font-style: normal;
    font-variant: normal;
    font-weight: 400;
    line-height: 30px;
}

.project_browse_number {
    font-family: "Playfair Display";
    font-size: 20px;
    font-style: normal;
    font-variant: normal;
    font-weight: 400;
    line-height: 18.6px;
}

.centered_title {
    text-align: center;
}

.navbar .navbar-brand {
    color: white;
    font-size: 50px;
}

.navbar {
    min-height: 80px;
    background-color: black;
}

.navbar-brand {
    padding: 0 15px;
    height: 80px;
    line-height: 80px;
}

.navbar-toggle {
  /* (80px - button height 34px) / 2 = 23px */
  margin-top: 23px;
  padding: 9px 10px !important;
}

